branches/fukids/html/css/sortableTable.css
/****LAYOUT


************************/
*{
MozUserSelect:none
}
body{
font-size:10pt;
MozUserSelect:none
}
#Mother{
	padding:10px;
}
#top_icon_Bar{
	width:100%;
	height:30pt;
}
#down{
	width:100%;
}
#down_right{
	float:right;
	width:85%;
}
#down_left{
float:left;
width:14%;
overflow:hidden;
display:none;
}

select{
width:80%;
overflow:hidden;
}

.icon{
	width:30px;
	height:30px;
	float: left;
	margin: 0px 10px 0px 0px;
	cursor: pointer;
	text-align:center;
	border:1px solid #fff;
}

.icon-seperator{
	width:1px;
	height:30px;
	background-color: #000;
	float: left;
	margin: 0px 10px 0px 0px;
}
#searchdiv{
	float:right;
}

#torrent_info{
height:100%;
width:100%;
}
.statusicon{
height:16px;
width:16px;
padding:0px;
margin:0px;
background-attachment:fixed;
background: url(../images/icon/status/tstatus.bmp) no-repeat 0px 0px
}
/**************************************************************

	Sortable Table
	v 1.4

**************************************************************/

#list_torrent {
	height:80%;
}

.th div{
	/**
	th
	**/
	background-color: #eee;
	background: #eee url(../images/icon-table-sort.png) no-repeat 80% 4px;
	padding: 4px 4px 4px 14px;
	cursor: pointer;
}
.rows {
	background-color: #eee;
	padding: 4px;
}
.asc {
	background: url(../images/icon-table-sort-asc.png) no-repeat 80% 0px  !important;
}
.desc {
	background: url(../images/icon-table-sort-desc.png) no-repeat 80% 8px !important;
}
div.rows{
	/**
	all tr
	**/
	overflow: hidden;
	min-width:2000px;
	height: 1.2em;
}
div.rows div{
	/**
	td and th
	**/
	float:left;
	height: 1.3em;
	border-right : 1px solid #6699cc; 
	padding: 0 2px;
	margin:2px;
	overflow:hidden;
  word-wrap: break-word;
  
white-space: pre-wrap; /* css-3 */
white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
white-space: -pre-wrap; /* Opera 4-6 */
white-space: -o-pre-wrap; /* Opera 7 */
}
div.tbody{
	width:100%;
	cursor:default;
	height:80%;
}

.torrent_list_clicked {
	background-color: #AFD6FF;
	border : 3px solid #6699cc; 
}

.resize{
	right: 0px;
	top: 0px;
	z-index: 2;
	height: 1.2em;
	width: 7px;
	cursor: e-resize;
	float: right;
}
#torrent_list_div{
	overflow:auto;
	width: 100%;
	border:1px solid #ddccdd
}


/*************************************************************/

.tl_name{
	width:200px;
}
.tl_percent{
	width:170px;
}
.tl_peers,.tl_status,.tl_totalupload{
	width:50px;
}
.tl_filesize,.tl_seeds,.tl_downloadspeed,.tl_uploadspeed,.tl_estime{
	width:100px;
}
.progressbar{
background-position: -120px 0pt;
background:white url(../images/percentImage_back1.png) no-repeat scroll 1px 0pt;
margin:5px 0pt 0pt;
padding:0pt;
background-position:-120px 0pt;
}
.progressbar_text{
	left:-60px;
}

input.num{

}
fieldset{
margin: 10px 0px 10px 0px;
}
legend{
color:blue;
}

input.value{
background:#C7FF91;
border:1px solid #89FF19;
}
input.error{
background:#FF5755;
border:1px solid #BE0200;
}
.online{
	color:#19FF1C;
}
.offline{
	color:#FF1C19;
}

